# swissqrust

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  build.rs  crates.js  help.html  index.html  settings.html  src-files.js
.github/workflows/: CI-Coverage.yml  ci.yml  docs.yml  rust.yml
assets/iconset/: icon.icns
build_functions/: build_countries.rs  mod.rs  parse_svg.rs
data/: .gitignore  robert_schneider.json
examples/: cli.rs  gui.rs
examples/web/: Cargo.toml  Trunk.toml  index.html  main.rs
scripts/: find_unique_status.py
search.index/: 0158e87063a3.js  02cf77827413.js  02e852e0dd34.js  03c74e03d0bf.js  03c9c690560b.js  03d9b5cabde9.js  0483f639c2f2.js  04b015c3d5c4.js  04c7fdf78477.js  05a7a488e483.js  05c201608af4.js  066dafdad88f.js  08525eb4ea46.js  09efd54d2cce.js  0b009ec294e4.js  0b1ef49fb830.js  0c4e8956f308.js  0cea9fc10a38.js  0daba56a82f3.js  0e167745d99c.js  0f3b964e0344.js  0fb9191b57ab.js  0fef456dcd07.js  11116d084746.js  11572fbb81c2.js  12d85cc1d760.js  1360efb3ba5d.js  136428e64a81.js  16abc24a56d7.js  183b24f45330.js  187a17172aa1.js  18aba01ff863.js  19a67fd054b3.js  1ab749d16845.js  1be188a78397.js  1cfe7e22dad7.js  1d21718995d4.js  1f6636f1569d.js  200138fcd822.js  2093281e2cb1.js  (+121 more)
search.index/crateNames/: 88fab2a8bb61.js
search.index/desc/: dfbab752863c.js  e5db7f9a89a0.js
search.index/entry/: 4e4c502580a3.js  aa8ec9eec74e.js
search.index/function/: 60c0d3d43e71.js  ca03ea9c6fd8.js
search.index/generic_inverted_index/: 28fb3c57bcfa.js  3070660bb861.js
search.index/name/: b713f5169e1a.js  f4294c5b198d.js
search.index/normalizedName/: 11b932e327cd.js  682de0cb5ab0.js
search.index/path/: bdccedd53add.js  f716fc0732fe.js
search.index/type/: 236e8931ca69.js  2f3e90aac863.js
src/: cli.rs  iso_3166.rs  lib.rs  main.rs  main_old.rs  qr_renderers.rs  svg.rs  utils.rs  validators.rs
src/bill/: address.rs  bill.rs  bill_data.rs  build_bill.rs  mod.rs  qr_bill.rs  qr_bill_layout.rs  qrcode.rs  reference_type.rs
src/constants/: general.rs  mod.rs  payment_part.rs  receipt.rs
src/input/: input_bill.rs  mod.rs
src/language/: language.rs  mod.rs
src/layout/: draw.rs  geometry.rs  mod.rs  payment_part_layout.rs  qr_bill_layout.rs  receipt_part_layout.rs  slip_layout.rs
src/pdf/: fonts.rs  mod.rs  pdf_builder.rs  renderer.rs
src/qr_code/: mod.rs  qr_code.rs
src/render/: canvas.rs  debug_overlay.rs  mod.rs  qr_renderers.rs  render_png.rs  render_svg_to_pdf.rs  types.rs
src/render/engines/: mod.rs  qr_renderers.rs
src/render/layout/: bill_layout.rs  block.rs  block_elements.rs  draw.rs  geometry.rs  mod.rs  payment_part.rs  receipt_part.rs  spacing.rs
src/support/: cli.rs  mod.rs  traits.rs  utils.rs  validators.rs
src/svg/: mod.rs  svg_paths.rs
src/swiss_qrust/: lib.rs.html
src/swiss_qrust/bill/: address.rs.html  bill_data.rs.html  build_bill.rs.html  mod.rs.html  qr_bill.rs.html  (+1 more)
swiss_qrust/: all.html  constant.CORNER_MARKS_AMOUNT_POLYGONS.html  constant.CORNER_MARKS_AMOUNT_POLYLINES.html  constant.CORNER_MARKS_AMOUNT_RECTS.html  constant.CORNER_MARKS_AMOUNT_VIEWBOX.html  constant.CORNER_MARKS_PAYABLE_BY_POLYGONS.html  constant.CORNER_MARKS_PAYABLE_BY_POLYLINES.html  constant.CORNER_MARKS_PAYABLE_BY_RECTS.html  constant.CORNER_MARKS_PAYABLE_BY_VIEWBOX.html  constant.CROSS_POLYGONS.html  constant.CROSS_POLYLINES.html  constant.CROSS_RECTS.html  constant.CROSS_VIEWBOX.html  enum.Country.html  enum.CountryParseError.html  fn.parse_bill_data.html  index.html  macro.label!.html  macro.label.html  sidebar-items.js  struct.CountryMeta.html
swiss_qrust/bill/: index.html  sidebar-items.js
swiss_qrust/constants/: index.html  sidebar-items.js
swiss_qrust/input/: index.html  sidebar-items.js
swiss_qrust/language/: index.html  sidebar-items.js
swiss_qrust/render/: index.html  sidebar-items.js  trait.FontMetrics.html
swiss_qrust/support/: index.html  sidebar-items.js
tests/: bill_data_tests.rs  common.rs  test_bill_data.rs  test_languages.rs  test_pdf.rs  test_validators.rs
tests/common/: pdf_snapshot.rs
tests/fixtures/: Nr. 1 Datenschema englisch.txt  Nr. 13 Datenschema englisch.txt  Nr. 14 Datenschema englisch.txt  Nr. 17 Datenschema englisch.txt  Nr. 18 Datenschema englisch.txt  Nr. 2 Datenschema englisch.txt  Nr. 21 Datenschema englisch.txt  Nr. 22 Datenschema englisch.txt  Nr. 29 Datenschema englisch.txt  Nr. 30 Datenschema englisch.txt  Nr. 34 Datenschema englisch.txt  Nr. 37 Datenschema englisch.txt  Nr. 38 Datenschema englisch.txt  Nr. 45 Datenschema englisch.txt  Nr. 46 Datenschema englisch.txt  Nr. 5 Datenschema englisch.txt  Nr. 6 Datenschema englisch.txt
web/: Cargo.toml  index.html  input.css  tailwind.config.js
web/src/: bui_language.rs  components.rs  main.rs  state.rs  utils.rs
web/src/components/: address_component.rs  mod.rs  preview.rs  preview_component.rs  sidebar.rs  sidebar_component.rs  widgets.rs
(+328 files in other folders)
