[package]
name = "swiss_qrust"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
serde =  { version = "1.0.228", features = ["derive"]}
regex = "1.12.2"
once_cell = "1.21.3"
thiserror = "2.0.18"
qrcodegen = "1.8.0"
usvg = "0.47.0"
resvg = "0.47.0"
svg = "0.18.0"
pdf-writer = "0.13.0"
ttf-parser = "0.25.1"
miniz_oxide = "0.9.0"

[build-dependencies]
serde =  { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
roxmltree = "0.21.1"
