[package]
name = "swiss_qrust"
version = "0.1.0"
edition = "2024"

[[example]]
name = "web-version"
path = "examples/web/main.rs"
required-features = ["web"]

[features]
pdf-debug = []
web = ["leptos", "wasm-bindgen", "web-sys", "js-sys", "console_error_panic_hook"]


[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
serde =  { version = "1.0.228", features = ["derive"]}
regex = "1.12.2"
once_cell = "1.21.3"
thiserror = "2.0.18"
qrcodegen = "1.8.0"
usvg = "0.47.0"
resvg = "0.47.0"
svg = "0.18.0"
pdf-writer = "0.14.0"
ttf-parser = "0.25.1"
miniz_oxide = "0.9.0"
anyhow = "1.0.102"
toml = "1.0.3"
serde_json = "1.0.149"
iced = { version =  "0.14.0", features = ["svg", "advanced"] }
rfd = "0.17.2"
leptos = { version = "0.8.17", features = ["csr"], optional = true }
wasm-bindgen = {  version = "0.2.114", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3.91", features = ["HtmlAnchorElement", "Url", "Blob"], optional = true }
js-sys = { version = "0.3.91", optional = true }
component = "0.1.1"


[build-dependencies]
serde =  { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
roxmltree = "0.21.1"

[dev-dependencies]
pdf-extract = "0.10.0"
lopdf = "0.39.0"

[package.metadata.packager]
identifier = "ch.prosser.swissqrust"
icons = [
    "./assets/iconset/icon.icns",
    "./assets/ico/icon.ico",
    "./assets/png/icon.png"
]

# Point to the actual binary file created by the build command
binaries = [
    { path = "../../target/release/examples/gui", main = true }
]

before-packaging-command = "cargo build --release --example gui"
