[package]
name = "swiss-qrrust-web"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = {version = "0.8.17", features = ["csr"]}
console_error_panic_hook = "0.1.7"
swiss_qrust = { path = "../." }
wasm-bindgen = "0.2.114"
web-sys = {  version = "0.3.91", features = ["Blob", "BlobPropertyBag", "HtmlAnchorElement", "Url", "Window", "Document", "File", "FileList", "HtmlInputElement"] }
js-sys = "0.3.91"
wasm-bindgen-futures = "0.4.64"
toml = "0.9.12+spec-1.1.0"


